fix: add gap between elements of task details page

--- a/src/Components/TaskDetail/index.css
+++ b/src/Components/TaskDetail/index.css
@@ -1,9 +1,36 @@
 
 .task-content{
-    background-color: black;
-    padding: 8px;
+    padding: 6px 10px;
     margin:4px;
     color:white;
     border-radius: 6px;
     cursor: pointer;
+    background-color: white;
+    font-size: 18px;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
+
+}
+
+.task-detail-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    gap:10px;
+    width: 100%;
+}
+
+.task-detail-container h2{
+    font-size: 18px;
+    cursor: pointer;
+}
+
+@media screen and (min-width:768px){
+    .task-content{
+        font-size: 20px;
+    }
+
+    .task-detail-container h2{
+        font-size: 20px;
+    }
 }
